--- a/ass6/ascii.css
+++ b/ass6/ascii.css
@@ -1,3 +1,34 @@
+.container
+{
+    width: 960px;
+    margin: 0 auto;
+}
+
+img{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 15px;
+    height: 15px;
+    background-color:#CCCCFF;
+}
+#text-area{
+	font-family: monospace;
+    font-size: 12pt;
+	width: 90%;
+}
+
+fieldset{
+     border: 5px solid black;
+     display: inline;
+}
+legend {
+   text-align: left;
+}
+
+button{
+    width: 47%;
+}
 body{
     font-weight: bold;
     text-align: center;
@@ -6,42 +37,18 @@ body{
     background-color:#CCCCFF;
     font-family: sans-serif;
     font-size: 14pt;
+   
 }
-
 header{
     font-size: 32pt;
     font-weight: bold;
     margin:0px;
+    
 }
-
-#text-area{
-    margin-left: auto;
-    margin-right: auto;
-    font-family: monospace;
-    font-weight: bold;
-    font-size: 12pt;
-    width: 90%;
-    height: 400px;
-}
-
-fieldset{
-    border: 5px solid black;
-    display: inline;
-}
-
-legend {
-    text-align: left;
-}
-
-button{
-    width: 47%;
-}
-
 select{
     width:98%;
 }
-
 #validate{
-    right:0px;
     position: fixed;
+    right:0px;
 }
