--- a/ass7/account.css
+++ b/ass7/account.css
@@ -6,6 +6,8 @@ body{
     background-color:rgb(201, 212, 191);
     font-family: sans-serif;
     font-size: 14pt;
+    justify-content: center;
+    align-items: center;
 }
 header{
     color: black;
@@ -18,6 +20,8 @@ header{
     width: 800px;
     margin: auto;
     background-color:grey;
+    justify-content: center;
+    align-items: center;
 }
 
 .container2{
